--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,5 +15,5 @@ jobs:
             - uses: actions/upload-artifact@v1
               if: failure()
               with:
-                name: logs-${{ matrix.shard }}
-                path: logs
+                name: ./logs-${{ matrix.shard }}
+                path: ./logs
