--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,17 +1,46 @@
-name: CI
-on: [push, pull_request]
+name: Test
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  linux:
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node-version: [14, 16, 18, 20]
+        java-version: [11]
+        include:
+          - os: macos-latest
+            node-version: 20
+            java-version: 11
+          - os: windows-latest
+            node-version: 20
+            java-version: 11
+    runs-on: ${{ matrix.os }}
     steps:
-        - name: Checkout
-          uses: actions/checkout@v4
-        - uses: actions/setup-node@v3
-          with:
-            node-version: 18
-        - name: Install
-          run: npm install
-        - name: Test
-          run: npm run wdio
-        - uses: actions/upload-artifact@v1
-          if: failure()
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: ${{ matrix.java-version }}
+      - uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - uses: actions/cache@v2
+        id: cache
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-${{ matrix.node-version }}-node_modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm ci
+      # - name: Build
+      #   run: npm run build
+      - name: Test
+        run: npm run wdio
+        env:
+          CI: true
