--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,12 +10,17 @@ jobs:
           with:
             node-version: 18
         - name: Install
-          run: npm install
+          run: npm ci
+          env:
+            DETECT_CHROMEDRIVER_VERSION: true
         - name: Test
-          run: npm run wdio
-        - uses: dorny/test-reporter@v1
-          if: success() || failure()    # run this step even if previous step failed
-          # with:
-          #   name: Junit Tests            # Name of the check run which will be created
-          #   path: '**/target/surefire-reports/TEST-*.xml'
-          #   reporter: java-junit
+          run: npm run ${{ matrix.exampleDir }}
+          working-directory: ${{ matrix.exampleDir }}
+        - name: 🐛 Debug Build
+          uses: stateful/vscode-server-action@v1
+          if: failure()
+        - uses: actions/upload-artifact@v1
+          if: failure()
+          with:
+            name: logs
+            path: ${{ matrix.exampleDir }}/logs
