add test yaml to run e2e

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,3 +27,6 @@ jobs:
           with:
             name: logs
             path: log/
+        - name: Upload GitHub Pages artifact
+          uses: actions/upload-pages-artifact@v3.0.1
+    
