--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,41 +18,44 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      # - name: Upload artifact
+      #   uses: actions/upload-pages-artifact@v3
+      #   with:
+      #     # Upload entire repository
+      #     path: '.'
+      # - name: Deploy to GitHub Pages
+      #   id: deployment
+      #   uses: actions/deploy-pages@v4
   build:
     runs-on: ubuntu-latest
     steps:
-        - name: Checkout
-          uses: actions/checkout@v4
-        - uses: actions/setup-node@v3
-          with:
-            node-version: 18
-        - name: Setup
-          run: npm install
-        - name: Test
-          run: npm run wdio
-          env:
-            ENV_PATH: environment/QS
-        - name: Upload Test Reports
-          if: success() || failure() 
-          uses: actions/upload-artifact@v2
-          with:
-            name: _site
-            path: .tmp/report/
-        - name: Upload Logs
-          if: success() || failure() 
-          uses: actions/upload-artifact@v2
-          with:
-            name: logs
-            path: log/
-        - name: Upload GitHub Pages artifact
-          if: success() || failure() 
-          uses: actions/upload-pages-artifact@v3.0.1
+      - name: Checkout
+        uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Setup
+        run: npm install
+      - name: Test
+        run: npm run wdio
+        env:
+          ENV_PATH: environment/QS
+      - name: Upload Test Reports
+        if: success() || failure() 
+        uses: actions/upload-artifact@v2
+        with:
+          name: _site
+          path: .tmp/report/
+      # - name: Upload Logs
+      #   if: success() || failure() 
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: logs
+      #     path: log/
+      - name: Upload GitHub Pages artifact
+        if: success() || failure() 
+        uses: actions/upload-pages-artifact@v3.0.1
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
     
