--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,7 +55,11 @@ jobs:
       - name: Upload GitHub Pages artifact
         if: success() || failure() 
         uses: actions/upload-pages-artifact@v3.0.1
+        with:
+          name: _site
+          path: .tmp/report/
       - name: Deploy to GitHub Pages
+        if: success() || failure()
         id: deployment
         uses: actions/deploy-pages@v4
     
