add test yaml to run e2e

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,4 +62,7 @@ jobs:
         if: success() || failure()
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          name: _site
+          path: .tmp/report/
     
