--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,14 +18,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      # - name: Upload artifact
-      #   uses: actions/upload-pages-artifact@v3
-      #   with:
-      #     # Upload entire repository
-      #     path: '.'
-      # - name: Deploy to GitHub Pages
-      #   id: deployment
-      #   uses: actions/deploy-pages@v4
   build:
     runs-on: ubuntu-latest
     steps:
@@ -40,12 +32,12 @@ jobs:
         run: npm run wdio
         env:
           ENV_PATH: environment/QS
-      - name: Upload Test Reports
-        if: success() || failure() 
-        uses: actions/upload-artifact@v2
-        with:
-          name: github-pages
-          path: .tmp/report/
+      # - name: Upload Test Reports
+      #   if: success() || failure() 
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: github-pages
+      #     path: .tmp/report/
       - name: Upload GitHub Pages artifact
         if: success() || failure() 
         uses: actions/upload-pages-artifact@v3.0.1
