--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
   setup:
     environment:
       name: github-pages
-      url: "${{ steps.deployment.outputs.page_url }}/${{steps.deployment.outputs.build_id}}"
+      url: "${{ steps.deployment.outputs.page_url }}/${{github.run_number}}"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
